2009-02-04  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam-manager-properties.glade:
	  Fix response id and icon path.

2009-02-04  Calum Benson  <calum.benson@sun.com>

	* capplet/nwam-manager-properties.glade:

	Add radio buttons for swapping between CLI and SMF for VPN apps.

2009-02-04  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam-manager-properties.glade:
	* capplet/nwam_condition_vbox.c:
	  Add support for combo selection of NCU/LOC/ENM based on field
	  selected.
	* common/nwamui_cond.c, common/nwamui_cond.h:
	  Add INCLUDE/DOES_NOT_INCLUDE conditions operators.
	* common/nwamui_env.c:
	  Remove obsolete functions.
	* common/nwamui_wifi_net.c, common/nwamui_wifi_net.h:
	  Add channel property.
	* capplet/nwam_conn_conf_ip_panel.c: 
	  Update to print panel

2009-02-03  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c: (tree_model_find_object_cb),
	(capplet_model_find_max_name_suffix),
	(capplet_get_increasable_name), (capplet_reset_increasable_name):
	* capplet/capplet-utils.h:
	Add simply functions to get increased name.
	* capplet/nwam_location_dialog.c: (refresh), (on_button_clicked):
	* capplet/nwam_vpn_pref_dialog.c: (refresh), (vpn_pref_clicked_cb):
	Use the increased name for the new added objects.

2009-02-03  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c, capplet/capplet-utils.h:
	Add a simple comment and update header file.
	* capplet/nwam_location_dialog.c: (on_button_clicked):
	Select new object after add it
	* capplet/nwam_vpn_pref_dialog.c: (apply), (response_cb),
	(vpn_pref_clicked_cb), (nwam_vpn_selection_changed):
	Add code to sync model and enm list. And select new object after add it.
	* capplet/nwam_tree_view.h:
	Updated header file

2009-02-03  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_conf_ip_panel.c: 
	  Change WIFI Fav list to be closer to UI Spec.
	* capplet/nwam_net_conf_panel.c: 
	  Ensure that the rules button correctly reflects the selected
	  NCU's activation mode.