@@ -114,6 +114,8 @@ extern nwamui_cond_activation_mode_t
 extern void                 nwamui_env_set_conditions ( NwamuiEnv *self, const GList* conditions );
 extern GList*               nwamui_env_get_conditions ( NwamuiEnv *self );
 
+extern gboolean             nwamui_env_is_active (NwamuiEnv *self);
+
 extern void                 nwamui_env_set_enabled ( NwamuiEnv *self, gboolean enabled );
 extern gboolean             nwamui_env_get_enabled ( NwamuiEnv *self );
 
